Allow Actuals to support comments via CSV upload
We needed to:

- Add the Comment field to ImportActuals::Converter::FIELDS
- Inform the ImportActuals::Converter that we can convert a simple
  string from the CSV into a Comment via #convert_comment
- Set the inverse end of the has_one :comment relationship by setting
  actual.comment.commentable = actual – this avoids a missing
  Commentable validation error.
- Safelist another Bullet false positive

  We create a false positive by failing to dereference a comment's owner
  in our Actuals upload feature spec. We can't remove the include as
  recommended because other specs depend on it, so we'll add to the
  already substantial Bullet safelist entries.

  See https://github.com/flyerhzm/bullet/issues/435
- Add comments to the view of actuals in a report

When we came to do things like

`@activity.comments.build(body: "Kittens", report: Report.first)` on an `Activity`, we would get this validation error on the newly created `Comment`:

`ActiveRecord::RecordInvalid: Validation failed: Commentable Commentable must exist`

This is because the scope `comments` uses the `Comment#for_activity` scope, which explicitly `LEFT JOIN`s some transaction types (refund and adjustment). Rails cannot then set the new comment's `commentable` property automatically as it would usually do in `@activity.comments.build`. We need to use the somewhat circuitous `@activity.comments.build(body: "Kittens", report: Report.first, commentable: @activity)`.

Co-authored-by: Russell Garner <rgarner@zephyros-systems.co.uk>

--- a/app/views/shared/actuals/_actuals_by_activity.html.haml
+++ b/app/views/shared/actuals/_actuals_by_activity.html.haml
@@ -23,6 +23,11 @@
                   = actual.financial_quarter_and_year
                 %td.govuk-table__cell--numeric{class: "govuk-!-width-one-half", scope: "col"}
                   = actual.value
+                  - if actual.comment
+                    %tr.govuk-table__row
+                      %td.govuk-table__cell--numeric{class: "govuk-!-width-full", scope: "col", colspan: 2}
+                        = actual.comment.body
+
 
     %tr.govuk-table__row.totals
       %td.govuk-table__cell Total
