Password reset doesn’t disclose email status
Turn the extra-discreet configuration on (called `paranoid` in devise lingo) to avoid email enumeration attacks.

Replace devise-styled error message partial with the GOV.UK-formatted error summary.

--- a/app/views/devise/passwords/new.html.haml
+++ b/app/views/devise/passwords/new.html.haml
@@ -5,7 +5,7 @@
 .govuk-grid-row
   .govuk-grid-column-one-third
     = form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f|
-      = render "devise/shared/error_messages", resource: resource
+      = f.govuk_error_summary
 
       = f.govuk_email_field :email, autofocus: true, autocomplete: "email"
 
