Display GOV.UK-styled error summary
Replace devise-styled error messages partial with the GOV.UK-formatted error summary.

The GOV.UK form builder only shows the first error message by design, and this choice is deeply embedded in the gem internals.

However, by listing all the password requirements in the hint, I am content that we are giving the user enough information, even if the error message doesn’t list all the missing requirements at once.

--- a/app/views/devise/passwords/edit.html.haml
+++ b/app/views/devise/passwords/edit.html.haml
@@ -3,13 +3,12 @@
 %h1.govuk-heading-l Change your password
 
 .govuk-grid-row
-  .govuk-grid-column-one-third
+  .govuk-grid-column-two-thirds
     = form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f|
-      = render "devise/shared/error_messages", resource: resource
-
+      = f.govuk_error_summary
       = f.hidden_field :reset_password_token
 
-      = f.govuk_password_field :password, autofocus: true, autocomplete: "new-password", label: {text: "New password"}, hint: {text: "(#{@minimum_password_length} characters minimum)"}
+      = f.govuk_password_field :password, autofocus: true, autocomplete: "new-password", label: {text: "New password"}, hint: {text: t("form.hint.user.new_password")}
 
       = f.govuk_password_field :password_confirmation, label: {text: "Confirm new password"}, autocomplete: "new-password"
 
