Move secondary actions to their respective templates
Previously, the secondary actions were only included for `new` and
`edit` respectively, but would fail to show up for `create` and `update`

--- a/app/views/staff/actuals/edit.html.haml
+++ b/app/views/staff/actuals/edit.html.haml
@@ -8,3 +8,5 @@
 
       = form_with model: @actual, url: activity_actual_path(@activity) do |f|
         = render partial: "form", locals: { f: f, organisations: @organisations }
+
+        = link_to t("default.button.delete"), activity_actual_path(@activity, @actual), method: "delete" , class: "govuk-button govuk-button--warning", "data-module": "govuk-button", role: "button", data: { confirm: "Are you sure you want to delete this actual spend?" }
