Title on Users index page no longer Home

--- a/app/views/staff/users/index.html.haml
+++ b/app/views/staff/users/index.html.haml
@@ -1,4 +1,4 @@
-=content_for :page_title_prefix, t("page_title.home")
+=content_for :page_title_prefix, t("page_title.users.index")
 
 %main.govuk-main-wrapper#main-content{ role: "main" }
   .govuk-grid-row
