Update page copy around bulk upload of actuals

--- a/app/views/staff/reports/_actuals_upload.html.haml
+++ b/app/views/staff/reports/_actuals_upload.html.haml
@@ -2,7 +2,7 @@
   = t("tabs.actuals.providing.heading")
 
 %p.govuk-body
-  = t("tabs.actuals.providing.copy")
+  = t("tabs.actuals.providing.copy_html")
 
 %h3.govuk-heading-s
   = t("tabs.actuals.upload.heading")
