BEIS users cannot create comments on actuals
It is already the case that BEIS users cannot create comments on
activities.

Rather than allow comments to not belong to a report, it seems to make
more sense to disallow BEIS users to add comments to actuals. (Level B
AKA programmes do not require a report to exist in order to have actuals.)

--- a/app/views/staff/actuals/_form.html.haml
+++ b/app/views/staff/actuals/_form.html.haml
@@ -34,7 +34,8 @@
     label: { text: t("form.label.actual.receiving_organisation_reference") },
     hint: { text: t("form.hint.actual.receiving_organisation_reference_html") }
 
-= f.govuk_text_area :comment,
-  value: f.object.comment
+- if ActualPolicy.new(current_user, f.object).create_comment?
+  = f.govuk_text_area :comment,
+    value: f.object.comment
 
 = f.govuk_submit t("default.button.submit")
