Allow editing comments on actuals from activity
To keep things simple, I’ve chosen to treat the actual and its comment
as one entity when editing, so the link to edit the comment resolves to
the editing page of the actual itself.

--- a/app/views/staff/activities/comments.html.haml
+++ b/app/views/staff/activities/comments.html.haml
@@ -39,7 +39,7 @@
                       = comment.body
                       - if policy([comment.commentable, comment]).update?
                         %span.govuk-body-s
-                          (#{a11y_action_link(t("default.link.edit"), edit_activity_comment_path(@activity, comment))})
+                          (#{a11y_action_link(t("default.link.edit"), edit_comment_path_for(comment.commentable, comment))})
                   .govuk-summary-list__row
                     %dt.govuk-summary-list__key
                       Date
