SPIKE Sort organisations by active status first

--- a/app/views/staff/organisations/_table.html.haml
+++ b/app/views/staff/organisations/_table.html.haml
@@ -25,6 +25,8 @@
                 %th.govuk-table__header
                   =t("table.header.organisation.beis_organisation_reference")
                 %th.govuk-table__header
+                  = t("table.header.organisation.active")
+                %th.govuk-table__header
                   %span.govuk-visually-hidden
                     = t("table.header.default.actions")
 
@@ -33,6 +35,7 @@
                 %tr.govuk-table__row.organisation{id: organisation.id}
                   %td.govuk-table__cell= organisation.name
                   %td.govuk-table__cell= organisation.beis_organisation_reference
+                  %td.govuk-table__cell= t("form.label.organisation.active.#{organisation.active}")
                   %td.govuk-table__cell
                     - if policy(organisation).show?
                       = a11y_action_link(t("default.link.show"), organisation_path(organisation), organisation.name)
