--- a/app/views/staff/shared/adjustments/_table.html.haml
+++ b/app/views/staff/shared/adjustments/_table.html.haml
@@ -11,7 +11,7 @@
         %th.govuk-table__header
           Report
         %th.govuk-table__header
-          Actions
+          = t("table.header.default.actions")
 
     %tbody.govuk-table__body
       - adjustments.each do |adjustment|
