--- a/app/views/staff/shared/refunds/_table.html.haml
+++ b/app/views/staff/shared/refunds/_table.html.haml
@@ -7,6 +7,8 @@
         %th.govuk-table__header
           = t("table.header.refund.value")
         %th.govuk-table__header
+          %span.govuk-visually-hidden
+            = t("table.header.default.actions")
 
     %tbody.govuk-table__body
       - refunds.each do |refund|
@@ -16,3 +18,6 @@
           %td.govuk-table__cell
             - if policy(refund).edit?
               = a11y_action_link(t('default.link.edit'), edit_activity_refund_path(refund.parent_activity_id, refund), t("page_content.refund.edit_noun"))
+            - else
+              %span.govuk-visually-hidden
+                = t("table.cell.default.no_actions_available")
