Remove invalid “aria-controls” attribute
The `controls` attribute, for an element with the `tab` role, is meant
to reference the ID of the tab panel that the tab element controls.

This doesn’t seem to be needed when the panel being controlled is on a
different page, thus not in the current page structure. (For an example
of tab panels being on the same page, see the Reports index page, where
Current and Approved reports are rendered on the same page.)

--- a/app/views/staff/shared/activities/_table.html.haml
+++ b/app/views/staff/shared/activities/_table.html.haml
@@ -9,12 +9,12 @@
           %li.govuk-tabs__list-item.govuk-tabs__list-item--selected{role: "presentation"}
             = link_to t("tabs.activities.current"),
               organisation_activities_path(@organisation),
-              { class: "govuk-tabs__tab", role: "tab", aria: { controls: "current", selected: true } }
+              { class: "govuk-tabs__tab", role: "tab", aria: { selected: true } }
 
           %li.govuk-tabs__list-item{role: "presentation"}
             = link_to t("tabs.activities.historic"),
               historic_organisation_activities_path(@organisation),
-              { class: "govuk-tabs__tab", role: "tab", aria: { controls: "historic", selected: false } }
+              { class: "govuk-tabs__tab", role: "tab", aria: { selected: false } }
 
         .govuk-tabs__panel
           %h2.govuk-heading-l
