--- a/app/views/staff/activities/historic.html.haml
+++ b/app/views/staff/activities/historic.html.haml
@@ -18,12 +18,12 @@
           %li.govuk-tabs__list-item
             = link_to t("tabs.activities.current"),
               organisation_activities_path(@organisation),
-              { class: "govuk-tabs__tab", role: "tab", aria: { controls: "current", selected: false } }
+              { class: "govuk-tabs__tab", role: "tab", aria: { selected: false } }
 
           %li.govuk-tabs__list-item.govuk-tabs__list-item--selected
             = link_to t("tabs.activities.historic"),
               historic_organisation_activities_path(@organisation),
-              { class: "govuk-tabs__tab", role: "tab", aria: { controls: "historic", selected: true } }
+              { class: "govuk-tabs__tab", role: "tab", aria: { selected: true } }
 
         .govuk-tabs__panel
           %h2.govuk-heading-l
