Sort organisations by active status first
We also show an inactive tag on inactive organisations.

The organisations share a view, so it is simpler to implement this
change for all other types of organisations (delivery partners, matched
effort providers, external income providers), not just the implementing
organisations that were the initial scope of the change.

Co-authored-by: Russell Garner <rgarner@zephyros-systems.co.uk>
Co-authored-by: Dragon <david.mckee@dxw.com>

--- a/app/views/staff/organisations/_table.html.haml
+++ b/app/views/staff/organisations/_table.html.haml
@@ -31,7 +31,10 @@
             %tbody.govuk-table__body
               - organisations.each do |organisation|
                 %tr.govuk-table__row.organisation{id: organisation.id}
-                  %td.govuk-table__cell= organisation.name
+                  %td.govuk-table__cell
+                    = organisation.name
+                    - unless organisation.active
+                      %span.govuk-tag.govuk-tag--grey= t('form.label.organisation.active.false')
                   %td.govuk-table__cell= organisation.beis_organisation_reference
                   %td.govuk-table__cell
                     - if policy(organisation).show?
