Fix missing landmarks around some contents
We’ve decided that the breadcrumbs are a navigation landmark, and the
beta banner is a region.

Relevant: https://www.w3.org/TR/wai-aria-1.2/#landmark_roles

Co-authored-by: dragon-dxw <david.mckee@dxw.com>

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -49,7 +49,7 @@
               = t('app.title')
 
     .govuk-width-container
-      .govuk-phase-banner
+      .govuk-phase-banner{role: "region", aria: { label: "Beta: feedback requested" }}
         %p.govuk-phase-banner__content
           %strong.govuk-tag.govuk-phase-banner__content__tag
             beta
