Include previous year in drop-down when posting external income
On April 1st 2022 (financial year 2022-2023) I may be
needing to post external income for the period Q4 2021-2022.

Previously we were offering only the ten years starting from
the "currrent" financial year, i.e. 2022-2023. We now
include the previous year also.

--- a/app/views/staff/external_incomes/_form.html.haml
+++ b/app/views/staff/external_incomes/_form.html.haml
@@ -11,7 +11,7 @@
           legend: { text: "Financial quarter" }
       .govuk-grid-column-one-third
         = f.govuk_collection_select :financial_year,
-          list_of_financial_years,
+          list_of_financial_years(FinancialYear.next_ten.prepend(FinancialYear.new(Date.today.year).pred)),
           :id,
           :name,
           label: { text: "Financial year", tag: :h2, size: "m" }
