Rename helper method
In addition to determining whether the environment name banner should be
shown, we are also going to use this method to determine whether emai
subjects of emails sent by the application should include the
environment name, so the old name is going to become inaccurate.

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -48,7 +48,7 @@
             %a.govuk-header__link.govuk-header__link--service-name{href: "/"}
               = t('app.title')
 
-    - if display_env_banner?
+    - if display_env_name?
       .environment-info-wrapper
         .environment-info-content{role: "region", aria: { label: "#{environment_name} environment" }}
           = environment_name
