--- a/app/views/staff/home/_delivery_partner_organisations_table.html.haml
+++ b/app/views/staff/home/_delivery_partner_organisations_table.html.haml
@@ -1,6 +1,6 @@
 %table.govuk-table#delivery_partner_organisations
   %caption.govuk-table__caption.govuk-table__caption--m
-    Delivery partner organisations
+    Partner organisations
   %thead.govuk-table__head
     %tr.govuk-table__row
       %th.govuk-table__header{scope: "col"}
