Use Partner organisation in all remaining views
These replacements have not triggered any spec failures, which means the
views are not tested for any specific wording. This is probably okay.

--- a/app/views/pages/accessibility_statement.html.haml
+++ b/app/views/pages/accessibility_statement.html.haml
@@ -6,7 +6,7 @@
       %h1.govuk-heading-xl
         = t("accessibility_statement.title")
       %p.govuk-body
-        This accessibility statement applies to the report your official development assistance (ODA) service. The service is used by the Department for Business, Energy, and Industrial Strategy (BEIS) and its delivery partners to add and manage information about funds and related activities for official development assistance, report actual and forecast spend on activities, and show summaries of ODA activity.
+        This accessibility statement applies to the report your official development assistance (ODA) service. The service is used by the Department for Business, Energy, and Industrial Strategy (BEIS) and its partner organisations to add and manage information about funds and related activities for official development assistance, report actual and forecast spend on activities, and show summaries of ODA activity.
       %p.govuk-body
         This service is managed by the Department for Business, Energy, and Industrial Strategy (BEIS). We want as many people as possible to be able to use this service. For example, that means you should be able to:
       %ul.govuk-list.govuk-list--bullet
