--- a/app/views/pages/terms_of_service.html.haml
+++ b/app/views/pages/terms_of_service.html.haml
@@ -48,8 +48,8 @@
 
       %p.govuk-body
         The RODA service team is responsible for assessing all requests for RODA user accounts for the purposes of publishing or managing Official Development Assistance (ODA) data.
-        Accounts will only be created for staff working within BEIS or a delivery partner organisation. If the RODA team detects or is alerted to any account held by or used by parties outside of BEIS
-        or a delivery partner organisation then that account will be suspended immediately.
+        Accounts will only be created for staff working within BEIS or a partner organisation. If the RODA team detects or is alerted to any account held by or used by parties outside of BEIS
+        or a partner organisation then that account will be suspended immediately.
 
       %h3.govuk-heading-s
         Access to the Service
@@ -87,8 +87,8 @@
         = link_to "Open Government Licence v3.0", "https://www.nationalarchives.gov.uk/doc/open-government-licence/version/3/", class: "govuk-link"
 
       %p.govuk-body
-        Delivery Partner organisations are responsible for the accuracy and completeness of the data contained in their submitted reports. We have a responsibility to assure and review submitted data before it is approved for use outside of the Service.
-        Delivery Partner organisations are required to respond within a reasonable time to any data quality issues we may raise during the assurance review.
+        Partner Organisations are responsible for the accuracy and completeness of the data contained in their submitted reports. We have a responsibility to assure and review submitted data before it is approved for use outside of the Service.
+        Partner Organisations are required to respond within a reasonable time to any data quality issues we may raise during the assurance review.
 
       %p.govuk-body
         The Service also collects cookies. Please see our
