--- a/app/views/staff/reports_state/approve/complete.html.haml
+++ b/app/views/staff/reports_state/approve/complete.html.haml
@@ -17,4 +17,4 @@
         If any updates are required to the data in this report, they will have to be made in the current active report (see RODA User Manual).
 
       %p.govuk-body
-        Please notify the Service Manager and ODA PMO Finance Lead that the report has been approved. The Service Manager will then activate the new reports and notify Delivery Partners by email.
+        Please notify the Service Manager and ODA PMO Finance Lead that the report has been approved. The Service Manager will then activate the new reports and notify Partner Organisations by email.
