--- a/app/views/staff/reports_state/request_changes/complete.html.haml
+++ b/app/views/staff/reports_state/request_changes/complete.html.haml
@@ -11,10 +11,10 @@
         What happens next
 
       %p.govuk-body
-        The report is now Awaiting Changes from Delivery Partners. This means they can add or amend data in the existing report.
+        The report is now Awaiting Changes from Partner Organisation users. This means they can add or amend data in the existing report.
 
       %p.govuk-body
-        If you have comments for the Delivery Partner to address, you must send these in the RODA Query Log template referencing the Activity RODA ID's and url links to the specific activities.
+        If you have comments for the Partner Organisation to address, you must send these in the RODA Query Log template referencing the Activity RODA ID's and url links to the specific activities.
 
       %p.govuk-body
-        This report will have to be re-submitted by Delivery Partners before it can be approved.
+        This report will have to be re-submitted by Partner Organisation users before it can be approved.
