--- a/app/views/staff/reports_state/review/complete.html.haml
+++ b/app/views/staff/reports_state/review/complete.html.haml
@@ -13,10 +13,10 @@
       %p.govuk-body
         The report is now in review with BEIS.
         %br
-        Delivery Partner users are unable to edit the report whilst it is in review with BEIS. A copy of the CSV export should be downloaded and stored on Sharepoint, and the relevant BEIS users should be informed that the data is ready for BEIS Assurance.
+        Partner Organisation users are unable to edit the report whilst it is in review with BEIS. A copy of the CSV export should be downloaded and stored on Sharepoint, and the relevant BEIS users should be informed that the data is ready for BEIS Assurance.
 
       %p.govuk-body
-        All reviewers must complete their review and add comments to the Query Log before the specified deadline. If there are any queries with this report following the BEIS review, they will need to be collated in a RODA Query document and sent to Delivery Partner users for direct amendment in RODA.
+        All reviewers must complete their review and add comments to the Query Log before the specified deadline. If there are any queries with this report following the BEIS review, they will need to be collated in a RODA Query document and sent to Partner Organisation users for direct amendment in RODA.
 
       %p.govuk-body
-        RODA status will have to be updated to 'awaiting changes' to enable Delivery Partners to have access to edit the data.
+        RODA status will have to be updated to 'awaiting changes' to enable Partner Organisation users to have access to edit the data.
