--- a/app/views/staff/reports_state/review/confirm.html.haml
+++ b/app/views/staff/reports_state/review/confirm.html.haml
@@ -7,7 +7,7 @@
         = t("page_title.report.in_review.confirm", report_organisation: @report.organisation.name, report_financial_quarter: @report_presenter.financial_quarter_and_year)
 
       %p.govuk-body
-        You are now moving the report to 'in review' status. BEIS assurance should now review the data and let DPs know of any issues. Please note that DPs can view but not edit RODA whilst the data is 'in review'.
+        You are now moving the report to 'in review' status. BEIS assurance should now review the data and let POs know of any issues. Please note that POs can view but not edit RODA whilst the data is 'in review'.
 
       %ul.govuk-list.govuk-list--bullet
 
