Fix typos in partials
There was a typo in the instance var names being passed to the partial.
In addition, there was an error in how we passed the locals from the
`service_owner` view to the `delivery_partner_organisations_table`
partial.

The reason we never noticed is that we weren’t relying on the locals at
all. Instead, the partials were directly using the instance vars (which
are correctly set in the controllers).

I only noticed when I started replacing the names using “delivery
partner” with “partner organisation” and had to take a closer look at
these files.

I’m splitting this fix into its own commit in order to make the commit
with the renaming self-contained and easier to review.

--- a/app/views/staff/home/_delivery_partner_organisations_table.html.haml
+++ b/app/views/staff/home/_delivery_partner_organisations_table.html.haml
@@ -8,7 +8,7 @@
       %th.govuk-table__header{scope: "col"}
         = t("table.header.default.actions")
   %tbody.govuk-table__body
-    - @delivery_partner_organisations.each do |delivery_partner_organisation|
+    - delivery_partner_organisations.each do |delivery_partner_organisation|
       %tr.govuk-table__row
         %td.govuk-table__cell
           = a11y_action_link delivery_partner_organisation.name, organisation_path(delivery_partner_organisation), t("table.cell.organisations.details"), ["govuk-link--no-visited-state"]
