--- a/app/views/staff/activities/index_beis.html.haml
+++ b/app/views/staff/activities/index_beis.html.haml
@@ -6,4 +6,4 @@
 
       = render partial: "staff/searches/form"
 
-      = render partial: "staff/shared/organisations/organisations_activities_table", locals: { delivery_partner_organisations: @delivery_partner_organisations }
+      = render partial: "staff/shared/organisations/organisations_activities_table", locals: { partner_organisations: @partner_organisations }
