--- a/app/views/staff/home/_delivery_partner_organisations_table.html.haml
+++ b/app/views/staff/home/_delivery_partner_organisations_table.html.haml
@@ -8,11 +8,11 @@
       %th.govuk-table__header{scope: "col"}
         = t("table.header.default.actions")
   %tbody.govuk-table__body
-    - delivery_partner_organisations.each do |delivery_partner_organisation|
+    - partner_organisations.each do |partner_organisation|
       %tr.govuk-table__row
         %td.govuk-table__cell
-          = a11y_action_link delivery_partner_organisation.name, organisation_path(delivery_partner_organisation), t("table.cell.organisations.details"), ["govuk-link--no-visited-state"]
+          = a11y_action_link partner_organisation.name, organisation_path(partner_organisation), t("table.cell.organisations.details"), ["govuk-link--no-visited-state"]
         %td.govuk-table__cell
-          = a11y_action_link t("table.cell.organisations.view_activities"), organisation_activities_path(delivery_partner_organisation), "for #{delivery_partner_organisation.name}", ["govuk-link--no-visited-state"]
-          = a11y_action_link t("table.cell.organisations.view_exports"), exports_organisation_path(delivery_partner_organisation), "for #{delivery_partner_organisation.name}", ["govuk-link--no-visited-state", "govuk-!-margin-left-7"]
-          = a11y_action_link t("table.cell.organisations.view_reports"), organisation_reports_path(delivery_partner_organisation), "for #{delivery_partner_organisation.name}", ["govuk-link--no-visited-state", "govuk-!-margin-left-7"]
+          = a11y_action_link t("table.cell.organisations.view_activities"), organisation_activities_path(partner_organisation), "for #{partner_organisation.name}", ["govuk-link--no-visited-state"]
+          = a11y_action_link t("table.cell.organisations.view_exports"), exports_organisation_path(partner_organisation), "for #{partner_organisation.name}", ["govuk-link--no-visited-state", "govuk-!-margin-left-7"]
+          = a11y_action_link t("table.cell.organisations.view_reports"), organisation_reports_path(partner_organisation), "for #{partner_organisation.name}", ["govuk-link--no-visited-state", "govuk-!-margin-left-7"]
