--- a/app/views/staff/shared/organisations/_organisations_activities_table.html.haml
+++ b/app/views/staff/shared/organisations/_organisations_activities_table.html.haml
@@ -10,11 +10,11 @@
       %th.govuk-table__header{scope: "col", class: "govuk-!-width-one-quarter" }
         = t("table.header.default.action")
   %tbody.govuk-table__body
-    - delivery_partner_organisations.each do |delivery_partner_organisation|
+    - partner_organisations.each do |partner_organisation|
       %tr.govuk-table__row
         %td.govuk-table__cell
-          = delivery_partner_organisation.name
+          = partner_organisation.name
         %td.govuk-table__cell
-          = delivery_partner_organisation.beis_organisation_reference
+          = partner_organisation.beis_organisation_reference
         %td.govuk-table__cell
-          = a11y_action_link  t("table.actions.activity.view_activities"), organisation_activities_path(delivery_partner_organisation), "for #{delivery_partner_organisation.name}", ["govuk-link", "govuk-link--no-visited-state"]
+          = a11y_action_link  t("table.actions.activity.view_activities"), organisation_activities_path(partner_organisation), "for #{partner_organisation.name}", ["govuk-link", "govuk-link--no-visited-state"]
