--- a/app/views/staff/level_b_activity_uploads/new.html.haml
+++ b/app/views/staff/level_b_activity_uploads/new.html.haml
@@ -1,10 +1,10 @@
-= content_for :page_title_prefix, t("page_title.activity.upload_level_b", organisation_name: @organisation.name)
+= content_for :page_title_prefix, t("page_title.activity.upload_level_b", organisation_name: @organisation_presenter.name)
 
 %main.govuk-main-wrapper#main-content{ role: "main" }
   .govuk-grid-row
     .govuk-grid-column-two-thirds
       %h1.govuk-heading-xl
-        = t("page_title.activity.upload_level_b", organisation_name: @organisation.name)
+        = t("page_title.activity.upload_level_b", organisation_name: @organisation_presenter.name)
 
       %p.govuk-body
         Use the template to ensure your data is in the correct format.
@@ -12,13 +12,15 @@
   .govuk-grid-row
     .govuk-grid-column-two-thirds
       %h2.govuk-heading-m
-        = link_to t("action.activity.bulk_download.button"), "", class: "govuk-link"
+        = link_to t("action.activity.bulk_download.button"),
+          organisation_level_b_activity_upload_path(@organisation_presenter.id, format: :csv),
+          class: "govuk-link"
 
       %p.govuk-body
         = t("action.activity.bulk_download.hint_html")
 
       .govuk-body.upload-form
-        = form_with model: @organisation, url: "#", method: :get do |f|
+        = form_with model: @organisation_presenter, url: "#", method: :get do |f|
 
           = f.govuk_file_field :activity_csv,
             label: { text: t("form.label.activity.csv_file") },
