--- a/app/views/staff/shared/organisations/_organisations_activities_table.html.haml
+++ b/app/views/staff/shared/organisations/_organisations_activities_table.html.haml
@@ -1,4 +1,4 @@
-%table.govuk-table#delivery_partner_organisations
+%table.govuk-table#partner_organisations
   %caption.govuk-table__caption.govuk-table__caption--m
     = t("table.caption.activity.activities_by_partner_organisation")
   %thead.govuk-table__head
