--- a/app/views/staff/home/_delivery_partner_organisations_table.html.haml
+++ b/app/views/staff/home/_delivery_partner_organisations_table.html.haml
@@ -1,4 +1,4 @@
-%table.govuk-table#delivery_partner_organisations
+%table.govuk-table#partner_organisations
   %caption.govuk-table__caption.govuk-table__caption--m
     Partner organisations
   %thead.govuk-table__head
