Rename `delivery_partner_organisation` key

--- a/app/views/staff/shared/activities/_activity_summary.html.haml
+++ b/app/views/staff/shared/activities/_activity_summary.html.haml
@@ -2,7 +2,7 @@
   - if current_user.service_owner?
     .govuk-summary-list__row
       %dt.govuk-summary-list__key
-        = t("activerecord.attributes.activity.delivery_partner_organisation")
+        = t("activerecord.attributes.activity.partner_organisation")
       %dd.govuk-summary-list__value
         = activity_presenter.extending_organisation.name
 
