Rename `delivery_partner` role
The values in the database are integers (thanks to the attributes being
`enum`s), so they don’t need a data migration.

Renaming the roles has to happen at the same time as renaming all the
methods, locale strings, partials etc. that use the role names instead
of their numeric values.

--- a/app/views/staff/reports/_summary.html.haml
+++ b/app/views/staff/reports/_summary.html.haml
@@ -21,7 +21,7 @@
       = t("form.label.report.state")
     %dd.govuk-summary-list__value
       = @report_presenter.state
-  - if current_user.delivery_partner?
+  - if current_user.partner_organisation?
     .govuk-summary-list__row
       %dt.govuk-summary-list__key
         = t("page_content.report.summary.editable.title")
