--- a/app/views/staff/organisations/_table.html.haml
+++ b/app/views/staff/organisations/_table.html.haml
@@ -5,7 +5,7 @@
         Organisations
 
       %ul.govuk-tabs__list{role: "tablist"}
-        - ["delivery_partners", "matched_effort_providers", "external_income_providers", "implementing_organisations"].each do |role|
+        - ["partner_organisations", "matched_effort_providers", "external_income_providers", "implementing_organisations"].each do |role|
           %li{ class: "govuk-tabs__list-item #{role == @role ? "govuk-tabs__list-item--selected" : ""}"}
             = link_to t("tabs.organisations.#{role}"), organisations_path(role: role), { class: "govuk-tabs__tab", role: "tab", aria: { selected: (role == @role) } }
 
