Create Level B activities from bulk upload CSV
This adds an update action to the Level B activity uploads controller, which
handles uploads in the same way as the existing activity uploads controller

After attempting the upload, the user will be shown either a list of errors or a
success banner with a summary of the uploaded files. This is primarily a
duplication of the view from the existing activity bulk upload update action -
this will be refactored to DRY up the code using shared partials

Co-authored-by: George <george@dxw.com>

--- a/app/views/staff/level_b_activity_uploads/new.html.haml
+++ b/app/views/staff/level_b_activity_uploads/new.html.haml
@@ -20,7 +20,7 @@
         = t("action.activity.bulk_download.hint_html")
 
       .govuk-body.upload-form
-        = form_with model: @organisation_presenter, url: "#", method: :get do |f|
+        = form_with model: @organisation_presenter, url: organisation_level_b_activity_upload_path do |f|
 
           = f.govuk_file_field :activity_csv,
             label: { text: t("form.label.activity.csv_file") },
