Refactor activity upload partials
This DRYs up the activity upload partials that were duplicated in
the original activity bulk upload and the new Level B activity
bulk upload. These are now within an activity_uploads folder in the
shared partials folder. The activities table partial is also used
by the staff/reports/acitivites view (the activities tab when
viewing a report), so this is also updated to use the shared partial

As the two URLs in the upload form partial differ slightly - one
requires the format to be CSV, whereas the other doesn't - the path
helper is sent as a local and invoked using `send` with different
arguments in order to render the appropriate URL

Co-authored-by: George <george@dxw.com>

--- a/app/views/staff/activity_uploads/update.html.haml
+++ b/app/views/staff/activity_uploads/update.html.haml
@@ -9,15 +9,15 @@
   - unless @errors.empty?
     .govuk-grid-row
       .govuk-grid-column-full
-        = render partial: "error_table"
+        = render partial: "staff/shared/activity_uploads/error_table"
 
   - if @success
     - if @activities[:created].any?
-      = render partial: "activities_table", locals: { action: "created", activities: @activities[:created], table_caption: t("table.caption.activity.new_activities") }
+      = render partial: "staff/shared/activity_uploads/activities_table", locals: { action: "created", activities: @activities[:created], table_caption: t("table.caption.activity.new_activities") }
     - if @activities[:updated].any?
-      = render partial: "activities_table", locals: { action: "updated", activities: @activities[:updated], table_caption: t("table.caption.activity.updated_activities") }
+      = render partial: "staff/shared/activity_uploads/activities_table", locals: { action: "updated", activities: @activities[:updated], table_caption: t("table.caption.activity.updated_activities") }
   - else
-    = render partial: "upload_form"
+    = render partial: "staff/shared/activity_uploads/upload_form", locals: { model: @report_presenter, path_helper: "report_activity_upload_path" }
 
   .govuk-grid-row
     .govuk-grid-column-two-thirds
