Make partner organisation identifier optional for Level B
This updates the validation of an activity's `partner_organisation_identifier` as
triggered on the `:idenitifer_step` so that `presence: true` is only required when the
activity is a project (i.e. Level C or D)

This also updates the step-by-step form for adding an individual Level B activity
so that the heading indicates that the field is optional, and updates a test that was
looking at this heading on Level C/D activities to use a translation file, rather than
hard-coded (English) text

--- a/app/views/staff/activity_forms/identifier.html.haml
+++ b/app/views/staff/activity_forms/identifier.html.haml
@@ -1,2 +1,3 @@
 = render layout: "wrapper" do |f|
-  = f.govuk_text_field :partner_organisation_identifier, label: { tag: 'h1', size: 'xl' }
+  = f.govuk_text_field :partner_organisation_identifier,
+    label: { tag: 'h1', size: 'xl', text: @label_text }
