Add "Upload Data" link to Org Activities table
We added this in addition to the link in the BEIS user home page
table as it felt like a more sensible place for the link to live - users
would likely go to "activities" before wanting to upload bulk Level B
activities.

--- a/app/views/staff/shared/organisations/_organisations_activities_table.html.haml
+++ b/app/views/staff/shared/organisations/_organisations_activities_table.html.haml
@@ -17,4 +17,5 @@
         %td.govuk-table__cell
           = partner_organisation.beis_organisation_reference
         %td.govuk-table__cell
-          = a11y_action_link  t("table.actions.activity.view_activities"), organisation_activities_path(partner_organisation), "for #{partner_organisation.name}", ["govuk-link", "govuk-link--no-visited-state"]
+          = a11y_action_link t("table.actions.activity.view_activities"), organisation_activities_path(partner_organisation), "for #{partner_organisation.name}", ["govuk-link--no-visited-state"]
+          = a11y_action_link t("table.cell.organisations.upload_data"), new_organisation_level_b_activity_upload_path(partner_organisation), "for #{partner_organisation.name}", ["govuk-link--no-visited-state", "govuk-!-margin-left-5"]
