--- a/app/views/staff/level_b/budgets/uploads/new.html.haml
+++ b/app/views/staff/level_b/budgets/uploads/new.html.haml
@@ -12,7 +12,9 @@
   .govuk-grid-row
     .govuk-grid-column-two-thirds
       %h2.govuk-heading-m
-        = link_to t("action.budget.bulk_download.button"), "", class: "govuk-link"
+        = link_to t("action.budget.bulk_download.button"),
+          level_b_budgets_upload_path(format: :csv),
+          class: "govuk-link"
 
       %p.govuk-body
         = t("action.budget.bulk_download.hint_html")
