--- a/app/views/staff/level_b/budgets/uploads/new.html.haml
+++ b/app/views/staff/level_b/budgets/uploads/new.html.haml
@@ -20,7 +20,7 @@
         = t("action.budget.bulk_download.hint_html")
 
       .govuk-body.upload-form
-        = form_with model: BudgetUpload.new, url: "#", method: :get do |f|
+        = form_with model: BudgetUpload.new, url: level_b_budgets_upload_path do |f|
 
           = f.govuk_file_field :csv,
             label: { text: t("form.label.budget.csv_file") },
