Point “Back” link to homepage
Point the "Back to home" link on the Level B activities bulk upload page
to the home page instead of the organisations page.

--- a/app/views/staff/level_b/activities/uploads/update.html.haml
+++ b/app/views/staff/level_b/activities/uploads/update.html.haml
@@ -21,4 +21,4 @@
 
   .govuk-grid-row
     .govuk-grid-column-two-thirds
-      %p.govuk-body= link_to "Back to home", organisations_path
+      %p.govuk-body= link_to "Back to home", home_path
