Use a helper to determine if XML download shown
We use this logic in multiple places, which makes it hard to change if
the business logic ever changes.

The logic was also slightly incorrect, in that it didn’t check for
permissions separately for projects and third-party projects. While this
is how policies are defined currently, with similar permissions for both
levels, it might not always be the case.

--- a/app/views/activities/children.html.haml
+++ b/app/views/activities/children.html.haml
@@ -13,9 +13,8 @@
 
   .govuk-grid-row
     .govuk-grid-column-full
-      - if @activity.project? || @activity.third_party_project?
-        - if policy(:project).download? || policy(:third_party_project).download?
-          = link_to t("default.button.download_as_xml"), organisation_activity_path(@activity.organisation, @activity, format: :xml), class: "govuk-button"
+      - if can_download_as_xml?(activity: @activity, user: current_user)
+        = link_to t("default.button.download_as_xml"), organisation_activity_path(@activity.organisation, @activity, format: :xml), class: "govuk-button"
 
   .govuk-grid-row
     .govuk-grid-column-full
