Set funds instance var in reports controller
This refactor will make it easier in the future to change which funds
are used to generate the fund dropdown in the new report form, by making
this a responsibility of the controller instead of the view.

This will make it easier to hide a specific fund with feature flagging.

--- a/app/views/reports/new.html.haml
+++ b/app/views/reports/new.html.haml
@@ -26,7 +26,7 @@
                 label: { text: "Financial year", tag: :h2, size: "m" }
 
         = f.govuk_radio_buttons_fieldset :fund_id do
-          - Activity.fund.each do |fund|
+          - @funds.each do |fund|
             = f.govuk_radio_button :fund_id, fund.id, label: { text: fund.title }
 
         = f.govuk_collection_select :organisation_id,
