Show ODA/Non-ODA on activity details
Show the ODA/Non-ODA status on activity details.

Show “Add”/“Edit” link if the user has permissions to edit the activity.

The method that decides between “add” and “edit” was using `blank?` to
check for a value being present. This test isn’t accurate for booleans,
where `false` is a valid value. We’re replacing `blank?` with `nil?`,
which is more accurate for checking whether a value has been filled in
at all.

--- a/app/views/shared/activities/_activity.html.haml
+++ b/app/views/shared/activities/_activity.html.haml
@@ -25,6 +25,17 @@
         - if policy(activity_presenter).update? && activity_presenter.level.present? && activity_presenter.parent.blank?
           = a11y_action_link(t("default.link.add"), activity_step_path(activity_presenter, :parent), t("activerecord.attributes.activity.parent").downcase)
 
+  - if activity_presenter.requires_is_oda?
+    .govuk-summary-list__row.parent
+      %dt.govuk-summary-list__key
+        = t("activerecord.attributes.activity.is_oda")
+      %dd.govuk-summary-list__value
+        - unless activity_presenter.is_oda.nil?
+          = t("summary.label.activity.is_oda.#{activity_presenter.is_oda}")
+      %dd.govuk-summary-list__actions
+        - if policy(activity_presenter).update?
+          = a11y_action_link(t("default.link.#{activity_presenter.call_to_action(:is_oda)}"), activity_step_path(activity_presenter, :is_oda), t("activerecord.attributes.activity.is_oda"))
+
   .govuk-summary-list__row.identifier
     %dt.govuk-summary-list__key
       = t("activerecord.attributes.activity.partner_organisation_identifier")
